// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonGroup button props buttonSize compressed is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--compressed euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize compressed is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--compressed euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize m is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--medium euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize m is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--medium euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize s is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize s is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color danger is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--danger"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color danger is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--danger"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color ghost is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--ghost"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color ghost is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--ghost"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color primary is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color primary is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color secondary is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--secondary"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color secondary is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--secondary"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color text is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color text is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color warning is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--warning"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color warning is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--warning"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isDisabled is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--isDisabled"
  disabled=""
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled testClass1 testClass2"
      data-test-subj="test subject string"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button01"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isDisabled is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--isDisabled"
  disabled=""
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled testClass1 testClass2"
      data-test-subj="test subject string"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button01"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isFullWidth is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--fullWidth"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isFullWidth is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--fullWidth"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isIconOnly is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isIconOnly testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isIconOnly"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled euiButtonGroupButton-isIconOnly"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isIconOnly is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isIconOnly testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isIconOnly"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled euiButtonGroupButton-isIconOnly"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props selection idSelected is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            checked=""
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props selection idToSelectedMap is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type multi is rendered 1`] = `
<fieldset
  aria-label="aria-label"
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
  data-test-subj="test subject string"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type single is rendered 1`] = `
<fieldset
  aria-label="aria-label"
  class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
  data-test-subj="test subject string"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          <input
            class="euiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="euiButton__text euiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;
